# predicate_dispatch

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: publish-to-testpypi.yml  release.yml  tests.yml
src/: predicate_dispatch.py
tests/: test_predicate_behaviour.py  test_predicate_cache.py  test_predicate_cache_result.py  test_predicate_dispatch.py
